--- a/sf65.project
+++ b/sf65.project
@@ -11,10 +11,6 @@
     <File Name="sf65.h"/>
     <File Name="sf65.c"/>
     <File Name="pretty6502.c" ExcludeProjConfig="Debug"/>
-    <File Name="helpers.c"/>
-    <File Name="mnemonics.c"/>
-    <File Name="directives.c"/>
-    <File Name="expression.c"/>
     <File Name="test.out" ExcludeProjConfig="Debug"/>
     <File Name="test.src" ExcludeProjConfig="Debug"/>
     <File Name="sf65_types.h"/>
@@ -22,6 +18,10 @@
     <File Name="sf65_CMDArgs.c"/>
     <File Name="circcycv1.out" ExcludeProjConfig="Debug"/>
     <File Name="circcycv1.s" ExcludeProjConfig="Debug"/>
+    <File Name="sf65_mnemonics.c"/>
+    <File Name="sf65_helpers.c"/>
+    <File Name="sf65_expression.c"/>
+    <File Name="sf65_directives.c"/>
   </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
