--- a/sf65.project
+++ b/sf65.project
@@ -23,23 +23,17 @@
     <File Name="sf65.h"/>
     <File Name="sf65.c"/>
     <File Name="pretty6502.c" ExcludeProjConfig="Debug"/>
-    <File Name="test.out" ExcludeProjConfig="Debug"/>
-    <File Name="test.src" ExcludeProjConfig="Debug"/>
     <File Name="sf65_types.h"/>
-    <File Name="circcycv1.out" ExcludeProjConfig="Debug"/>
-    <File Name="circcycv1.s" ExcludeProjConfig="Debug"/>
     <File Name="sf65_mnemonics.c"/>
     <File Name="sf65_helpers.c"/>
-    <File Name="sf65_expression.c"/>
     <File Name="sf65_directives.c"/>
-    <File Name="testfiles/scope_padding_test.s" ExcludeProjConfig="Debug"/>
-    <File Name="testfiles/scope_padding_test.out"/>
     <VirtualDirectory Name="StringFunctions">
       <File Name="stringfunctions/sf65_stringfunctions.h"/>
       <File Name="stringfunctions/sf65_stringfunctions.c"/>
     </VirtualDirectory>
     <VirtualDirectory Name="ExpressionParsing">
       <File Name="expressionparsing/sf65_expressionparsing.h"/>
+      <File Name="expressionparsing/sf65_expressionparsing.c"/>
     </VirtualDirectory>
     <VirtualDirectory Name="CommandLineParsing">
       <File Name="sf65_CMDArgs.c"/>
@@ -60,6 +54,16 @@
     <VirtualDirectory Name="OutputFormatting">
       <File Name="outputformatting/sf65_outputformatting.h"/>
       <File Name="outputformatting/sf65‌_outputformatting.c"/>
+    </VirtualDirectory>
+    <VirtualDirectory Name="Testfiles">
+      <File Name="test.out"/>
+      <File Name="test.src"/>
+      <File Name="circcycv1.out"/>
+      <File Name="testfiles/scope_padding_test.out"/>
+      <File Name="testfiles/hexvariable_test.txt"/>
+      <File Name="testfiles/hexvariable_test.out"/>
+      <File Name="circcycv1.txt"/>
+      <File Name="testfiles/scope_padding_test.txt"/>
     </VirtualDirectory>
   </VirtualDirectory>
   <Settings Type="Executable">
