--- a/sf65.project
+++ b/sf65.project
@@ -63,6 +63,8 @@
       <File Name="testfiles/hexvariable_test.out"/>
       <File Name="circcycv1.txt"/>
       <File Name="testfiles/scope_padding_test.txt"/>
+      <File Name="testfiles/label_test.txt"/>
+      <File Name="testfiles/label_test.out"/>
     </VirtualDirectory>
     <File Name="sf65.c"/>
   </VirtualDirectory>
