Improved label detection. Distinction between macros and labels now work

--- a/sf65.project
+++ b/sf65.project
@@ -64,6 +64,9 @@
       <File Name="circcycv1.txt"/>
       <File Name="testfiles/scope_padding_test.txt"/>
       <File Name="testfiles/hexvariable_test.log"/>
+      <File Name="testfiles/label_test.out"/>
+      <File Name="testfiles/label_test.txt"/>
+      <File Name="testfiles/label_test.log"/>
     </VirtualDirectory>
     <File Name="sf65.c"/>
   </VirtualDirectory>
