Fixed reoccured issue with space between hex specifier and hex-number. Additional space is now requested always, if mnemonic follows label.

--- a/sf65.project
+++ b/sf65.project
@@ -67,6 +67,7 @@
       <File Name="testfiles/label_test.out"/>
       <File Name="testfiles/label_test.txt"/>
       <File Name="testfiles/label_test.log"/>
+      <File Name="test.log"/>
     </VirtualDirectory>
     <File Name="sf65.c"/>
   </VirtualDirectory>
