Changed err type definition to contain fixed length message string

--- a/sf65.project
+++ b/sf65.project
@@ -54,224 +54,223 @@
       <File Name="outputformatting/sf65‌_outputformatting.c"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Testfiles">
-      <File Name="circcycv1.txt"/>
-      <File Name="testfiles/comment_test.txt"/>
-      <File Name="testfiles/expressions_test.txt"/>
-      <File Name="testfiles/hexvariable_test.txt"/>
-      <File Name="testfiles/mnemonics_test.txt"/>
       <File Name="testfiles/scope_padding_test.txt"/>
+      <File Name="testfiles/mnemonics_test.txt"/>
+      <File Name="testfiles/hexvariable_test.txt"/>
+      <File Name="testfiles/expressions_test.txt"/>
       <File Name="testfiles/test.txt"/>
       <File Name="testfiles/label_test.txt"/>
-      <File Name="testfiles/comment_test_def"/>
+      <File Name="testfiles/comment_test.txt"/>
       <File Name="testfiles/comment_test_def.log"/>
-      <File Name="testfiles/comment_test_-dl-ml"/>
+      <File Name="testfiles/comment_test_def.out"/>
       <File Name="testfiles/comment_test_-dl-ml.log"/>
-      <File Name="testfiles/comment_test_-dl-mu"/>
+      <File Name="testfiles/comment_test_-dl-ml.out"/>
       <File Name="testfiles/comment_test_-dl-mu.log"/>
-      <File Name="testfiles/comment_test_-dl-mu-n2"/>
+      <File Name="testfiles/comment_test_-dl-mu.out"/>
       <File Name="testfiles/comment_test_-dl-mu-n2.log"/>
-      <File Name="testfiles/comment_test_-du-ml"/>
+      <File Name="testfiles/comment_test_-dl-mu-n2.out"/>
       <File Name="testfiles/comment_test_-du-ml.log"/>
-      <File Name="testfiles/comment_test_-du-ml-c40"/>
+      <File Name="testfiles/comment_test_-du-ml.out"/>
       <File Name="testfiles/comment_test_-du-ml-c40.log"/>
-      <File Name="testfiles/comment_test_-du-ml-e0"/>
+      <File Name="testfiles/comment_test_-du-ml-c40.out"/>
       <File Name="testfiles/comment_test_-du-ml-e0.log"/>
-      <File Name="testfiles/comment_test_-du-ml-e1"/>
+      <File Name="testfiles/comment_test_-du-ml-e0.out"/>
       <File Name="testfiles/comment_test_-du-ml-e1.log"/>
-      <File Name="testfiles/comment_test_-du-ml-l0"/>
+      <File Name="testfiles/comment_test_-du-ml-e1.out"/>
       <File Name="testfiles/comment_test_-du-ml-l0.log"/>
-      <File Name="testfiles/comment_test_-du-ml-l1"/>
+      <File Name="testfiles/comment_test_-du-ml-l0.out"/>
       <File Name="testfiles/comment_test_-du-ml-l1.log"/>
-      <File Name="testfiles/comment_test_-du-ml-l2"/>
+      <File Name="testfiles/comment_test_-du-ml-l1.out"/>
       <File Name="testfiles/comment_test_-du-ml-l2.log"/>
-      <File Name="testfiles/comment_test_-du-ml-m16"/>
+      <File Name="testfiles/comment_test_-du-ml-l2.out"/>
       <File Name="testfiles/comment_test_-du-ml-m16.log"/>
-      <File Name="testfiles/comment_test_-du-ml-o16"/>
+      <File Name="testfiles/comment_test_-du-ml-m16.out"/>
       <File Name="testfiles/comment_test_-du-ml-o16.log"/>
-      <File Name="testfiles/comment_test_-du-ml-s1"/>
+      <File Name="testfiles/comment_test_-du-ml-o16.out"/>
       <File Name="testfiles/comment_test_-du-ml-s1.log"/>
-      <File Name="testfiles/comment_test_-du-mu"/>
+      <File Name="testfiles/comment_test_-du-ml-s1.out"/>
       <File Name="testfiles/comment_test_-du-mu.log"/>
-      <File Name="testfiles/expressions_test_def"/>
+      <File Name="testfiles/comment_test_-du-mu.out"/>
       <File Name="testfiles/expressions_test_def.log"/>
-      <File Name="testfiles/expressions_test_-dl-ml"/>
+      <File Name="testfiles/expressions_test_def.out"/>
       <File Name="testfiles/expressions_test_-dl-ml.log"/>
-      <File Name="testfiles/expressions_test_-dl-mu"/>
+      <File Name="testfiles/expressions_test_-dl-ml.out"/>
       <File Name="testfiles/expressions_test_-dl-mu.log"/>
-      <File Name="testfiles/expressions_test_-dl-mu-n2"/>
+      <File Name="testfiles/expressions_test_-dl-mu.out"/>
       <File Name="testfiles/expressions_test_-dl-mu-n2.log"/>
-      <File Name="testfiles/expressions_test_-du-ml"/>
+      <File Name="testfiles/expressions_test_-dl-mu-n2.out"/>
       <File Name="testfiles/expressions_test_-du-ml.log"/>
-      <File Name="testfiles/expressions_test_-du-ml-c40"/>
+      <File Name="testfiles/expressions_test_-du-ml.out"/>
       <File Name="testfiles/expressions_test_-du-ml-c40.log"/>
-      <File Name="testfiles/expressions_test_-du-ml-e0"/>
+      <File Name="testfiles/expressions_test_-du-ml-c40.out"/>
       <File Name="testfiles/expressions_test_-du-ml-e0.log"/>
-      <File Name="testfiles/expressions_test_-du-ml-e1"/>
+      <File Name="testfiles/expressions_test_-du-ml-e0.out"/>
       <File Name="testfiles/expressions_test_-du-ml-e1.log"/>
-      <File Name="testfiles/expressions_test_-du-ml-l0"/>
+      <File Name="testfiles/expressions_test_-du-ml-e1.out"/>
       <File Name="testfiles/expressions_test_-du-ml-l0.log"/>
-      <File Name="testfiles/expressions_test_-du-ml-l1"/>
+      <File Name="testfiles/expressions_test_-du-ml-l0.out"/>
       <File Name="testfiles/expressions_test_-du-ml-l1.log"/>
-      <File Name="testfiles/expressions_test_-du-ml-l2"/>
+      <File Name="testfiles/expressions_test_-du-ml-l1.out"/>
       <File Name="testfiles/expressions_test_-du-ml-l2.log"/>
-      <File Name="testfiles/expressions_test_-du-ml-m16"/>
+      <File Name="testfiles/expressions_test_-du-ml-l2.out"/>
       <File Name="testfiles/expressions_test_-du-ml-m16.log"/>
-      <File Name="testfiles/expressions_test_-du-ml-o16"/>
+      <File Name="testfiles/expressions_test_-du-ml-m16.out"/>
       <File Name="testfiles/expressions_test_-du-ml-o16.log"/>
-      <File Name="testfiles/expressions_test_-du-ml-s1"/>
+      <File Name="testfiles/expressions_test_-du-ml-o16.out"/>
       <File Name="testfiles/expressions_test_-du-ml-s1.log"/>
-      <File Name="testfiles/expressions_test_-du-mu"/>
+      <File Name="testfiles/expressions_test_-du-ml-s1.out"/>
       <File Name="testfiles/expressions_test_-du-mu.log"/>
-      <File Name="testfiles/hexvariable_test_def"/>
+      <File Name="testfiles/expressions_test_-du-mu.out"/>
       <File Name="testfiles/hexvariable_test_def.log"/>
-      <File Name="testfiles/hexvariable_test_-dl-ml"/>
+      <File Name="testfiles/hexvariable_test_def.out"/>
       <File Name="testfiles/hexvariable_test_-dl-ml.log"/>
-      <File Name="testfiles/hexvariable_test_-dl-mu"/>
+      <File Name="testfiles/hexvariable_test_-dl-ml.out"/>
       <File Name="testfiles/hexvariable_test_-dl-mu.log"/>
-      <File Name="testfiles/hexvariable_test_-dl-mu-n2"/>
+      <File Name="testfiles/hexvariable_test_-dl-mu.out"/>
       <File Name="testfiles/hexvariable_test_-dl-mu-n2.log"/>
-      <File Name="testfiles/hexvariable_test_-du-ml"/>
+      <File Name="testfiles/hexvariable_test_-dl-mu-n2.out"/>
       <File Name="testfiles/hexvariable_test_-du-ml.log"/>
-      <File Name="testfiles/hexvariable_test_-du-ml-c40"/>
+      <File Name="testfiles/hexvariable_test_-du-ml.out"/>
       <File Name="testfiles/hexvariable_test_-du-ml-c40.log"/>
-      <File Name="testfiles/hexvariable_test_-du-ml-e0"/>
+      <File Name="testfiles/hexvariable_test_-du-ml-c40.out"/>
       <File Name="testfiles/hexvariable_test_-du-ml-e0.log"/>
-      <File Name="testfiles/hexvariable_test_-du-ml-e1"/>
+      <File Name="testfiles/hexvariable_test_-du-ml-e0.out"/>
       <File Name="testfiles/hexvariable_test_-du-ml-e1.log"/>
-      <File Name="testfiles/hexvariable_test_-du-ml-l0"/>
+      <File Name="testfiles/hexvariable_test_-du-ml-e1.out"/>
       <File Name="testfiles/hexvariable_test_-du-ml-l0.log"/>
-      <File Name="testfiles/hexvariable_test_-du-ml-l1"/>
+      <File Name="testfiles/hexvariable_test_-du-ml-l0.out"/>
       <File Name="testfiles/hexvariable_test_-du-ml-l1.log"/>
-      <File Name="testfiles/hexvariable_test_-du-ml-l2"/>
+      <File Name="testfiles/hexvariable_test_-du-ml-l1.out"/>
       <File Name="testfiles/hexvariable_test_-du-ml-l2.log"/>
-      <File Name="testfiles/hexvariable_test_-du-ml-m16"/>
+      <File Name="testfiles/hexvariable_test_-du-ml-l2.out"/>
       <File Name="testfiles/hexvariable_test_-du-ml-m16.log"/>
-      <File Name="testfiles/hexvariable_test_-du-ml-o16"/>
+      <File Name="testfiles/hexvariable_test_-du-ml-m16.out"/>
       <File Name="testfiles/hexvariable_test_-du-ml-o16.log"/>
-      <File Name="testfiles/hexvariable_test_-du-ml-s1"/>
+      <File Name="testfiles/hexvariable_test_-du-ml-o16.out"/>
       <File Name="testfiles/hexvariable_test_-du-ml-s1.log"/>
-      <File Name="testfiles/hexvariable_test_-du-mu"/>
+      <File Name="testfiles/hexvariable_test_-du-ml-s1.out"/>
       <File Name="testfiles/hexvariable_test_-du-mu.log"/>
-      <File Name="testfiles/label_test_def"/>
+      <File Name="testfiles/hexvariable_test_-du-mu.out"/>
       <File Name="testfiles/label_test_def.log"/>
-      <File Name="testfiles/label_test_-dl-ml"/>
+      <File Name="testfiles/label_test_def.out"/>
       <File Name="testfiles/label_test_-dl-ml.log"/>
-      <File Name="testfiles/label_test_-dl-mu"/>
+      <File Name="testfiles/label_test_-dl-ml.out"/>
       <File Name="testfiles/label_test_-dl-mu.log"/>
-      <File Name="testfiles/label_test_-dl-mu-n2"/>
+      <File Name="testfiles/label_test_-dl-mu.out"/>
       <File Name="testfiles/label_test_-dl-mu-n2.log"/>
-      <File Name="testfiles/label_test_-du-ml"/>
+      <File Name="testfiles/label_test_-dl-mu-n2.out"/>
       <File Name="testfiles/label_test_-du-ml.log"/>
-      <File Name="testfiles/label_test_-du-ml-c40"/>
+      <File Name="testfiles/label_test_-du-ml.out"/>
       <File Name="testfiles/label_test_-du-ml-c40.log"/>
-      <File Name="testfiles/label_test_-du-ml-e0"/>
+      <File Name="testfiles/label_test_-du-ml-c40.out"/>
       <File Name="testfiles/label_test_-du-ml-e0.log"/>
-      <File Name="testfiles/label_test_-du-ml-e1"/>
+      <File Name="testfiles/label_test_-du-ml-e0.out"/>
       <File Name="testfiles/label_test_-du-ml-e1.log"/>
-      <File Name="testfiles/label_test_-du-ml-l0"/>
+      <File Name="testfiles/label_test_-du-ml-e1.out"/>
       <File Name="testfiles/label_test_-du-ml-l0.log"/>
-      <File Name="testfiles/label_test_-du-ml-l1"/>
+      <File Name="testfiles/label_test_-du-ml-l0.out"/>
       <File Name="testfiles/label_test_-du-ml-l1.log"/>
-      <File Name="testfiles/label_test_-du-ml-l2"/>
+      <File Name="testfiles/label_test_-du-ml-l1.out"/>
       <File Name="testfiles/label_test_-du-ml-l2.log"/>
-      <File Name="testfiles/label_test_-du-ml-m16"/>
+      <File Name="testfiles/label_test_-du-ml-l2.out"/>
       <File Name="testfiles/label_test_-du-ml-m16.log"/>
-      <File Name="testfiles/label_test_-du-ml-o16"/>
+      <File Name="testfiles/label_test_-du-ml-m16.out"/>
       <File Name="testfiles/label_test_-du-ml-o16.log"/>
-      <File Name="testfiles/label_test_-du-ml-s1"/>
+      <File Name="testfiles/label_test_-du-ml-o16.out"/>
       <File Name="testfiles/label_test_-du-ml-s1.log"/>
-      <File Name="testfiles/label_test_-du-mu"/>
+      <File Name="testfiles/label_test_-du-ml-s1.out"/>
       <File Name="testfiles/label_test_-du-mu.log"/>
-      <File Name="testfiles/mnemonics_test_def"/>
+      <File Name="testfiles/label_test_-du-mu.out"/>
       <File Name="testfiles/mnemonics_test_def.log"/>
-      <File Name="testfiles/mnemonics_test_-dl-ml"/>
+      <File Name="testfiles/mnemonics_test_def.out"/>
       <File Name="testfiles/mnemonics_test_-dl-ml.log"/>
-      <File Name="testfiles/mnemonics_test_-dl-mu"/>
+      <File Name="testfiles/mnemonics_test_-dl-ml.out"/>
       <File Name="testfiles/mnemonics_test_-dl-mu.log"/>
-      <File Name="testfiles/mnemonics_test_-dl-mu-n2"/>
+      <File Name="testfiles/mnemonics_test_-dl-mu.out"/>
       <File Name="testfiles/mnemonics_test_-dl-mu-n2.log"/>
-      <File Name="testfiles/mnemonics_test_-du-ml"/>
+      <File Name="testfiles/mnemonics_test_-dl-mu-n2.out"/>
       <File Name="testfiles/mnemonics_test_-du-ml.log"/>
-      <File Name="testfiles/mnemonics_test_-du-ml-c40"/>
+      <File Name="testfiles/mnemonics_test_-du-ml.out"/>
       <File Name="testfiles/mnemonics_test_-du-ml-c40.log"/>
-      <File Name="testfiles/mnemonics_test_-du-ml-e0"/>
+      <File Name="testfiles/mnemonics_test_-du-ml-c40.out"/>
       <File Name="testfiles/mnemonics_test_-du-ml-e0.log"/>
-      <File Name="testfiles/mnemonics_test_-du-ml-e1"/>
+      <File Name="testfiles/mnemonics_test_-du-ml-e0.out"/>
       <File Name="testfiles/mnemonics_test_-du-ml-e1.log"/>
-      <File Name="testfiles/mnemonics_test_-du-ml-l0"/>
+      <File Name="testfiles/mnemonics_test_-du-ml-e1.out"/>
       <File Name="testfiles/mnemonics_test_-du-ml-l0.log"/>
-      <File Name="testfiles/mnemonics_test_-du-ml-l1"/>
+      <File Name="testfiles/mnemonics_test_-du-ml-l0.out"/>
       <File Name="testfiles/mnemonics_test_-du-ml-l1.log"/>
-      <File Name="testfiles/mnemonics_test_-du-ml-l2"/>
+      <File Name="testfiles/mnemonics_test_-du-ml-l1.out"/>
       <File Name="testfiles/mnemonics_test_-du-ml-l2.log"/>
-      <File Name="testfiles/mnemonics_test_-du-ml-m16"/>
+      <File Name="testfiles/mnemonics_test_-du-ml-l2.out"/>
       <File Name="testfiles/mnemonics_test_-du-ml-m16.log"/>
-      <File Name="testfiles/mnemonics_test_-du-ml-o16"/>
+      <File Name="testfiles/mnemonics_test_-du-ml-m16.out"/>
       <File Name="testfiles/mnemonics_test_-du-ml-o16.log"/>
-      <File Name="testfiles/mnemonics_test_-du-ml-s1"/>
+      <File Name="testfiles/mnemonics_test_-du-ml-o16.out"/>
       <File Name="testfiles/mnemonics_test_-du-ml-s1.log"/>
-      <File Name="testfiles/mnemonics_test_-du-mu"/>
+      <File Name="testfiles/mnemonics_test_-du-ml-s1.out"/>
       <File Name="testfiles/mnemonics_test_-du-mu.log"/>
-      <File Name="testfiles/scope_padding_test_def"/>
+      <File Name="testfiles/mnemonics_test_-du-mu.out"/>
       <File Name="testfiles/scope_padding_test_def.log"/>
-      <File Name="testfiles/scope_padding_test_-dl-ml"/>
+      <File Name="testfiles/scope_padding_test_def.out"/>
       <File Name="testfiles/scope_padding_test_-dl-ml.log"/>
-      <File Name="testfiles/scope_padding_test_-dl-mu"/>
+      <File Name="testfiles/scope_padding_test_-dl-ml.out"/>
       <File Name="testfiles/scope_padding_test_-dl-mu.log"/>
-      <File Name="testfiles/scope_padding_test_-dl-mu-n2"/>
+      <File Name="testfiles/scope_padding_test_-dl-mu.out"/>
       <File Name="testfiles/scope_padding_test_-dl-mu-n2.log"/>
-      <File Name="testfiles/scope_padding_test_-du-ml"/>
+      <File Name="testfiles/scope_padding_test_-dl-mu-n2.out"/>
       <File Name="testfiles/scope_padding_test_-du-ml.log"/>
-      <File Name="testfiles/scope_padding_test_-du-ml-c40"/>
+      <File Name="testfiles/scope_padding_test_-du-ml.out"/>
       <File Name="testfiles/scope_padding_test_-du-ml-c40.log"/>
-      <File Name="testfiles/scope_padding_test_-du-ml-e0"/>
+      <File Name="testfiles/scope_padding_test_-du-ml-c40.out"/>
       <File Name="testfiles/scope_padding_test_-du-ml-e0.log"/>
-      <File Name="testfiles/scope_padding_test_-du-ml-e1"/>
+      <File Name="testfiles/scope_padding_test_-du-ml-e0.out"/>
       <File Name="testfiles/scope_padding_test_-du-ml-e1.log"/>
-      <File Name="testfiles/scope_padding_test_-du-ml-l0"/>
+      <File Name="testfiles/scope_padding_test_-du-ml-e1.out"/>
       <File Name="testfiles/scope_padding_test_-du-ml-l0.log"/>
-      <File Name="testfiles/scope_padding_test_-du-ml-l1"/>
+      <File Name="testfiles/scope_padding_test_-du-ml-l0.out"/>
       <File Name="testfiles/scope_padding_test_-du-ml-l1.log"/>
-      <File Name="testfiles/scope_padding_test_-du-ml-l2"/>
+      <File Name="testfiles/scope_padding_test_-du-ml-l1.out"/>
       <File Name="testfiles/scope_padding_test_-du-ml-l2.log"/>
-      <File Name="testfiles/scope_padding_test_-du-ml-m16"/>
+      <File Name="testfiles/scope_padding_test_-du-ml-l2.out"/>
       <File Name="testfiles/scope_padding_test_-du-ml-m16.log"/>
-      <File Name="testfiles/scope_padding_test_-du-ml-o16"/>
+      <File Name="testfiles/scope_padding_test_-du-ml-m16.out"/>
       <File Name="testfiles/scope_padding_test_-du-ml-o16.log"/>
-      <File Name="testfiles/scope_padding_test_-du-ml-s1"/>
+      <File Name="testfiles/scope_padding_test_-du-ml-o16.out"/>
       <File Name="testfiles/scope_padding_test_-du-ml-s1.log"/>
-      <File Name="testfiles/scope_padding_test_-du-mu"/>
+      <File Name="testfiles/scope_padding_test_-du-ml-s1.out"/>
       <File Name="testfiles/scope_padding_test_-du-mu.log"/>
-      <File Name="testfiles/test_def"/>
+      <File Name="testfiles/scope_padding_test_-du-mu.out"/>
       <File Name="testfiles/test_def.log"/>
-      <File Name="testfiles/test_-dl-ml"/>
+      <File Name="testfiles/test_def.out"/>
       <File Name="testfiles/test_-dl-ml.log"/>
-      <File Name="testfiles/test_-dl-mu"/>
+      <File Name="testfiles/test_-dl-ml.out"/>
       <File Name="testfiles/test_-dl-mu.log"/>
-      <File Name="testfiles/test_-dl-mu-n2"/>
+      <File Name="testfiles/test_-dl-mu.out"/>
       <File Name="testfiles/test_-dl-mu-n2.log"/>
-      <File Name="testfiles/test_-du-ml"/>
+      <File Name="testfiles/test_-dl-mu-n2.out"/>
       <File Name="testfiles/test_-du-ml.log"/>
-      <File Name="testfiles/test_-du-ml-c40"/>
+      <File Name="testfiles/test_-du-ml.out"/>
       <File Name="testfiles/test_-du-ml-c40.log"/>
-      <File Name="testfiles/test_-du-ml-e0"/>
+      <File Name="testfiles/test_-du-ml-c40.out"/>
       <File Name="testfiles/test_-du-ml-e0.log"/>
-      <File Name="testfiles/test_-du-ml-e1"/>
+      <File Name="testfiles/test_-du-ml-e0.out"/>
       <File Name="testfiles/test_-du-ml-e1.log"/>
-      <File Name="testfiles/test_-du-ml-l0"/>
+      <File Name="testfiles/test_-du-ml-e1.out"/>
       <File Name="testfiles/test_-du-ml-l0.log"/>
-      <File Name="testfiles/test_-du-ml-l1"/>
+      <File Name="testfiles/test_-du-ml-l0.out"/>
       <File Name="testfiles/test_-du-ml-l1.log"/>
-      <File Name="testfiles/test_-du-ml-l2"/>
+      <File Name="testfiles/test_-du-ml-l1.out"/>
       <File Name="testfiles/test_-du-ml-l2.log"/>
-      <File Name="testfiles/test_-du-ml-m16"/>
+      <File Name="testfiles/test_-du-ml-l2.out"/>
       <File Name="testfiles/test_-du-ml-m16.log"/>
-      <File Name="testfiles/test_-du-ml-o16"/>
+      <File Name="testfiles/test_-du-ml-m16.out"/>
       <File Name="testfiles/test_-du-ml-o16.log"/>
-      <File Name="testfiles/test_-du-ml-s1"/>
+      <File Name="testfiles/test_-du-ml-o16.out"/>
       <File Name="testfiles/test_-du-ml-s1.log"/>
-      <File Name="testfiles/test_-du-mu"/>
+      <File Name="testfiles/test_-du-ml-s1.out"/>
       <File Name="testfiles/test_-du-mu.log"/>
+      <File Name="testfiles/test_-du-mu.out"/>
     </VirtualDirectory>
     <File Name="sf65.c"/>
     <VirtualDirectory Name="ExpressionEvaluation">
