--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,5 @@ testfiles/test_-du-ml-s1.log
 testfiles/test_-du-mu
 testfiles/test_-du-mu.log
 testfiles/test.txt
+testfiles/test.err
+testfiles/*.err
