Solved doubling of last line issue by testing NULL ptr return value of fgets instead of using feof()

--- a/testfiles/fasttest.in
+++ b/testfiles/fasttest.in
@@ -1,14 +1,14 @@
-.proc
-.proc
-.proc
+.proc abc
+.proc def
+.proc hij
 .endproc
 .endproc
 .ENDPROC
 
-.proc
+.proc klm
 
-.proc
-.proc
+.proc nop
+.proc qrs
 .endproc
 
 .endproc
